# Console-Snake-Game

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  direction.h  field.h  food.h  random.h  snake.h  terminal.h
src/: field.cpp  food.cpp  main.cpp  random.cpp  snake.cpp  terminal.cpp
